Add `cargo deny` to project, remove `./dev generate crate`, add OpenAPI docs to `/apikeys/all` AND `/apikeys/{idOrName`
